# STM32-SPHINCS-PLUS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: test.yaml
lib/XKCP/armv6-m/libXKCP.a.headers/: SimpleFIPS202.h
lib/XKCP/generic64/libXKCP.a.headers/: SimpleFIPS202.h
src/: STM32G0B1RE.ld  main.c  startup.c
src/common/: address.c  address.h  crypto.c  crypto.h  defines.h  ring_buffer.c  ring_buffer.h  utils.c  utils.h
src/drivers/: io.c  io.h  rng.c  rng.h  uart.c  uart.h
src/test/: CMakeLists.txt  main.cpp  test_address.cpp  test_crypto.cpp  test_utils.cpp
